2000-03-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-sysdep.h: octave_chdir returns int, not bool.

2000-03-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (liboctave.$(SHLEXT)): Delete target
	before rebuilding.

2000-03-21  Ben Sapp <bsapp@nua.lampf.lanl.gov>:

	* liboctave/Makefile.in (liboctave.$(LIBEXT)): New target.
	(libraries): Depend only on library targets, not archive members.

2000-03-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: (objects): New target.

	* lo-cutils.c: New file.
	* Makefile.in (SOURCES): Add it to the list.
	* lo-utils.h: Declare octave_qsort here.
	* Array.h (Array::qsort): Use it here.

2000-03-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-time.cc: Include <sys/types.h> and <unistd.h>, if available.

2000-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-hist.c (octave_history_list): Do something when not
	printing line numbers.  Fix reallocation of retval.

2000-02-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-inc): Install files in
	$(octincludedir)/octave.
	(uninstall): Remove them from the correct directory too.

	* oct-time.cc: Temporarily define _BSD_SOURCE and _XOPEN_SOURCE if
	they are not already defined.

2000-02-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CRowVector.cc, CRowVector.h, CColVector.cc, CColVector.h:
	Delete declarations and definitions of mixed-type vector-vector ops.

2000-02-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CMatrix.h, CMatrix.cc: Add lssolve methods for real-valued RHS
	matrix and vector objects.

	* mx-op-defs.h (DMM_BIN_OP): Explicitly request conversion to
	return type from second arg type.
	(MDM_BIN_OP): Likewise, for first arg type.

	* dMatrix.cc (Matrix::fourier, Matrix::ifourier,
	Matrix::fourier2d, Matrix::ifourier2d): Likewise.

	* EIG.cc (EIG::symmetric_init, EIG::hermitian_init): Explicitly
	request ColumnVector to ComplexColumnVector, and Matrix to
	ComplexMatrix conversions.
