@@ -1,3 +1,7 @@
+2000-04-06  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Array.cc (Array<T>::operator =): Don't set max_indices to 1 here.
+
 2000-03-23  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* lo-sysdep.h: octave_chdir returns int, not bool.
